Added picture to project (sign-uppage) and edited description

--- a/index.html
+++ b/index.html
@@ -85,17 +85,28 @@
         </div>
         <!-- Project 1 -->
         <div class="project-box round-edges">
-          <h3>Project Title</h3>
-          <img class="project-img" src="images/USC.png" alt="" />
+          <h3>Sign-up-page</h3>
+          <img class="project-img" src="images/Sign-up-page.png" alt="" />
           <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin
-            laoreet, libero maximus pellentesque cursus, eros libero cursus
-            ligula, a imperdiet arcu dui a nisi. Ut commodo quam vitae sem
-            iaculis ullamcorper.
+            I created this project by following
+            <a href="https://www.youtube.com/@davidsonprogrammingacademy"
+              >Zoe Davidson's</a
+            >
+            youtube series on HTML & CSS.
           </p>
           <div class="proj-btns">
-            <button class="project-button round-edges">Site</button>
-            <button class="project-button round-edges">Github</button>
+            <button
+              class="project-button round-edges"
+              onclick="window.location.href='#';"
+            >
+              Site
+            </button>
+            <button
+              class="project-button round-edges"
+              onclick="window.location.href='https://github.com/Nicolaflame/sign-up-page';"
+            >
+              Github
+            </button>
           </div>
         </div>
         <!-- Project 2 -->
